added loader image while fetching suggestion

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 		<div class='app' data-version='0.1'>
 			<!-- various app views get loaded into this element-->
+			<img src='images/ajax-loader.gif'/>
 		</div>
 
 		<!-- Javascript includes -->
