polished the UI a bit

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
-		GrubGroup says eat at...
+		<div class='intro'>GrubGroup says eat at...</div>
 
 		<div class='app' data-version='0.1'>
 			<!-- various app views get loaded into this element-->
