cleaned up / added utils to project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script type='text/javascript' src="libraries/backbone-min.js"></script>
 
 		<script type='text/javascript' src='utils/tpl.js'></script>
+		<script type='text/javascript' src='utils/utils.js'></script>
 		<script type='text/javascript' src='models/model.place.js'></script>
 		<script type='text/javascript' src='views/view.suggestion.js'></script>
 		<script type='text/javascript' src='main.js'></script>
