added geolocation support

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 		<script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script type='text/javascript' src="libraries/underscore-min.js"></script>
 		<script type='text/javascript' src="libraries/backbone-min.js"></script>
+		<script type='text/javascript' src="libraries/guid.js"></script>
 
 		<script type='text/javascript' src='utils/tpl.js'></script>
 		<script type='text/javascript' src='utils/utils.js'></script>
+		<script type='text/javascript' src='utils/user.js'></script>
 		<script type='text/javascript' src='models/model.place.js'></script>
 		<script type='text/javascript' src='views/view.suggestion.js'></script>
 		<script type='text/javascript' src='main.js'></script>
