--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
 	</head>
-	<body>
+	<body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
 		<div class='intro'>GrubGroup says eat at...</div>
 
 		<div class='app' data-version='0.1'>
