--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
+		<link rel="apple-touch-icon" href="images/logo.png"/>
+		<meta name="apple-mobile-web-app-title" content="GrubGroup">
 	</head>
 	<body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
 		<div class='intro'>GrubGroup says eat at...</div>
