--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
-		<link rel="apple-touch-icon" href="images/logo.png"/>
+		<link rel="apple-touch-icon" href="images/logo_02.png"/>
 		<meta name="apple-mobile-web-app-title" content="GrubGroup">
 	</head>
 	<body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
-		<div class='intro'>GrubGroup says eat at...</div>
-
+		<div style='width: 100%; height: 50px; background-color: #47b4ff; margin-bottom: -50px;'>&nbsp;</div>
 		<div class='app' data-version='0.1'>
 			<!-- various app views get loaded into this element-->
-			<img src='images/ajax-loader.gif'/>
+			<img style='margin-top: 85px;' class='loader_image' src='images/ajax-loader.gif'/>
 		</div>
 
 		<!-- Javascript includes -->
