--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <html>
 	<head>
+		<title>GrubGroup says eat at...</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
 		<link rel="apple-touch-icon" href="images/logo_02.png"/>
 		<meta name="apple-mobile-web-app-title" content="GrubGroup">
+
+		<script type="text/javascript">
+
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-43946117-1']);
+			_gaq.push(['_setSiteSpeedSampleRate', 100]);
+			_gaq.push(['_setSampleRate', '100']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+
+		</script>
 	</head>
 	<body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
 		<div style='width: 100%; height: 50px; background-color: #47b4ff; margin-bottom: -50px;'>&nbsp;</div>
