GA event for suggestion / pageload

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<script type='text/javascript' src="libraries/backbone-min.js"></script>
 		<script type='text/javascript' src="libraries/guid.js"></script>
 
+		<script type='text/javascript' src='utils/track.js'></script>
 		<script type='text/javascript' src='utils/tpl.js'></script>
 		<script type='text/javascript' src='utils/utils.js'></script>
 		<script type='text/javascript' src='utils/user.js'></script>
