--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
 		<link rel="apple-touch-icon" href="images/logo_02.png"/>
-		<meta name="apple-mobile-web-app-title" content="GrubGroup">
+		<meta name="apple-mobile-web-app-title" content="GRUBforME">
 
 		<script type="text/javascript">
 
