--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</head>
 	<body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
 		<div style='width: 100%; height: 50px; background-color: #47b4ff; margin-bottom: -50px;'>&nbsp;</div>
-		<div class='app' data-version='0.1'>
+		<div class='app' data-version='0.2'>
 			<!-- various app views get loaded into this element-->
 			<img style='margin-top: 85px;' class='loader_image' src='images/ajax-loader.gif'/>
 		</div>
@@ -42,6 +42,7 @@
 		<script type='text/javascript' src='utils/utils.js'></script>
 		<script type='text/javascript' src='utils/user.js'></script>
 		<script type='text/javascript' src='models/model.place.js'></script>
+		<script type='text/javascript' src='collections/collection.place.js'></script>
 		<script type='text/javascript' src='views/view.suggestion.js'></script>
 		<script type='text/javascript' src='main.js'></script>
 	</body>
