--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
+		<link href="css/all.desktop.css" type="text/css" rel="stylesheet" media='screen and (min-width: 641px)' />
+		<link href="css/all.ipad.css" type="text/css" rel="stylesheet" media='screen and (min-device-width : 768px) and (max-device-width : 1024px)' />
+
 		<link rel="apple-touch-icon" href="images/logo_02.png"/>
 		<meta name="apple-mobile-web-app-title" content="GRUBforME">
 
@@ -25,7 +28,7 @@
 		</script>
 	</head>
 	<body onload="setTimeout(function() {window.scrollTo(0, 1)}, 100)">
-		<div style='width: 100%; height: 50px; background-color: #47b4ff; margin-bottom: -50px;'>&nbsp;</div>
+		<div style='position: fixed; top: 0px; left: 0px; z-index: 10100;  width: 100%; height: 50px; background-color: #47b4ff; margin-bottom: -50px;'>&nbsp;</div>
 		<div class='app' data-version='0.2'>
 			<!-- various app views get loaded into this element-->
 			<img style='margin-top: 85px;' class='loader_image' src='images/ajax-loader.gif'/>
