added messaging for no GEO location given; added parent VIEW and inherited all views from it

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 		<script type='text/javascript' src='utils/user.js'></script>
 		<script type='text/javascript' src='models/model.place.js'></script>
 		<script type='text/javascript' src='collections/collection.place.js'></script>
+
+		<script type='text/javascript' src='views/view._parent.js'></script>
 		<script type='text/javascript' src='views/view.suggestion.js'></script>
+		<script type='text/javascript' src='views/view.geolocation_denied.js'></script>
 		<script type='text/javascript' src='main.js'></script>
 	</body>
 </html>
