added groundwork for settings section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 		<script type='text/javascript' src='views/view._parent.js'></script>
 		<script type='text/javascript' src='views/view.suggestion.js'></script>
 		<script type='text/javascript' src='views/view.geolocation_denied.js'></script>
+		<script type='text/javascript' src='views/view.settings.js'></script>
 		<script type='text/javascript' src='main.js'></script>
 	</body>
 </html>
