--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<link href="css/switch.css" type="text/css" rel="stylesheet" />
 		<link href="css/all.css" type="text/css" rel="stylesheet" />
 		<link href="css/all.desktop.css" type="text/css" rel="stylesheet" media='screen and (min-width: 641px)' />
 		<link href="css/all.ipad.css" type="text/css" rel="stylesheet" media='screen and (min-device-width : 768px) and (max-device-width : 1024px)' />
@@ -39,6 +40,7 @@
 		<script type='text/javascript' src="libraries/underscore-min.js"></script>
 		<script type='text/javascript' src="libraries/backbone-min.js"></script>
 		<script type='text/javascript' src="libraries/guid.js"></script>
+		<script type='text/javascript' src="libraries/iphone-style-checkboxes.js"></script>
 
 		<script type='text/javascript' src='utils/track.js'></script>
 		<script type='text/javascript' src='utils/tpl.js'></script>
